--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(persistent_touch_id_sudo C)
 
 set(CMAKE_C_STANDARD 17)
 
-add_executable(com.yuriyguts.persistent-touch-id-sudo src/main.c)
+add_executable(persistent-touch-id-sudo src/main.c)
 
-install(TARGETS com.yuriyguts.persistent-touch-id-sudo DESTINATION /usr/local/bin)
+install(TARGETS persistent-touch-id-sudo DESTINATION /usr/local/bin)
 install(FILES assets/com.yuriyguts.persistent-touch-id-sudo.plist DESTINATION /Library/LaunchDaemons)
